# internal/handler/auth/request.go
@@ -1,0 +1,6 @@
+package auth
+
+type OTPVerificationRequest struct {
+	Email string `json:"email" binding:"required,email"`
+	OTP   int    `json:"otp" binding:"required"`
+}
